objects/ttt_Message__c.object
<CustomObject>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Small__c</fullName>
        <label>Message Small</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <referenceTo>ttt_Room__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Message</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>